<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.synnapps.carouselview.CarouselView
            android:id="@+id/is_main"
            android:layout_width="@dimen/_500sdp"
            android:layout_height="@dimen/_230sdp"
            android:background="@android:color/holo_green_light"
            app:fillColor="@android:color/white"
            app:pageColor="@android:color/transparent"
            app:radius="@dimen/_3sdp"
            app:slideInterval="3000"
            app:strokeWidth="@dimen/_1sdp"
            >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_menu"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="30dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/menu" />

                <ImageView
                    android:id="@+id/iv_fav"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_toRightOf="@+id/et_layout"
                    android:src="@drawable/ic_favorite_black_24dp" />

                <ImageView
                    android:id="@+id/iv_messeage"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_toRightOf="@id/iv_fav"
                    android:src="@drawable/email" />

                <ImageView
                    android:id="@+id/iv_notif"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_toRightOf="@id/iv_messeage"
                    android:src="@drawable/notif" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_layout"
                    android:layout_width="230dp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_toRightOf="@+id/iv_menu"
                    android:background="@drawable/bg_white"
                    app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                    app:boxCornerRadiusTopStart="@dimen/_10sdp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_search"
                        android:layout_width="230dp"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/search"
                        android:drawablePadding="@dimen/_5sdp"
                        android:hint="@string/search" />
                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>
        </com.synnapps.carouselview.CarouselView>


        <TextView
            android:id="@+id/tv_promo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/is_main"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/promo"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_kupon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_promo"
            android:layout_marginTop="@dimen/_5sdp"
            android:src="@drawable/kupon" />

       <androidx.recyclerview.widget.RecyclerView
           android:id="@+id/rv_category"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_below="@id/iv_kupon"
           android:layout_margin="@dimen/_5sdp"/>

        <TextView
            android:id="@+id/tv_pengguna_baru"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rv_category"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:paddingStart="@dimen/_5sdp"
            android:text="@string/pengguna"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_lihat_semua"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rv_category"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/more"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="@dimen/_10sdp" />

        <ImageView
            android:id="@+id/iv_pengguna_baru"
            android:layout_width="@dimen/_450sdp"
            android:layout_height="@dimen/_200sdp"
            android:layout_below="@id/tv_lihat_semua"
            android:layout_marginTop="@dimen/_5sdp"
            android:src="@drawable/pengguna_baru" />

        <TextView
            android:id="@+id/tv_cegah_virus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_pengguna_baru"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:paddingStart="@dimen/_5sdp"
            android:text="@string/cegah"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_lihat_semua_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_pengguna_baru"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/more"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="@dimen/_10sdp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_virus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_cegah_virus"
            android:layout_margin="@dimen/_5sdp" />

        <TextView
            android:id="@+id/tv_storage_fest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rv_virus"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:paddingStart="@dimen/_5sdp"
            android:text="@string/storage"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_lihat_semua_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rv_virus"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/more"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="@dimen/_10sdp" />

        <ImageView
            android:id="@+id/iv_storage"
            android:layout_width="450dp"
            android:layout_height="300dp"
            android:layout_below="@id/tv_storage_fest"
            android:src="@drawable/iklan_6" />

        <TextView
            android:id="@+id/tv_terlaris"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_storage"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:paddingStart="@dimen/_5sdp"
            android:text="@string/terlaris"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_lihat_semua_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_storage"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/more"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="@dimen/_10sdp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_terlaris"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_lihat_semua_4"
            android:layout_margin="@dimen/_5sdp" />

        <TextView
            android:id="@+id/tv_Official_store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rv_terlaris"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:paddingStart="@dimen/_5sdp"
            android:text="@string/official"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_lihat_semua_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rv_terlaris"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/more"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="@dimen/_10sdp" />

        <ImageView
            android:id="@+id/iv_official_store"
            android:layout_width="450dp"
            android:layout_height="300dp"
            android:layout_below="@id/tv_lihat_semua_5"
            android:src="@drawable/iklan_7" />

        <HorizontalScrollView
            android:id="@+id/hs_pilihan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_official_store"
            android:layout_marginTop="20dp"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_5sdp"
                    android:background="@drawable/bg_bt_1"
                    android:padding="@dimen/_20sdp"
                    android:text="@string/for_polo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_5sdp"
                    android:background="@drawable/bg_bt_2"
                    android:padding="@dimen/_20sdp"
                    android:text="@string/koleksi" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_5sdp"
                    android:background="@drawable/bg_bt_3"
                    android:padding="@dimen/_20sdp"
                    android:text="@string/promo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_5sdp"
                    android:background="@drawable/bg_bt_4"
                    android:padding="@dimen/_20sdp"
                    android:text="@string/discount" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_5sdp"
                    android:background="@drawable/bg_bt_5"
                    android:padding="@dimen/_20sdp"
                    android:text="@string/koleksi" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_5sdp"
                    android:background="@drawable/bg_bt_6"
                    android:padding="@dimen/_20sdp"
                    android:text="@string/makanan" />
            </LinearLayout>

        </HorizontalScrollView>


    </RelativeLayout>


</ScrollView>